syntax = "proto3";

option go_package = "mate_server/proto";

package mate.server.proto;

service MateService{
  rpc Join(JoinRequest) returns (JoinResponse) {}
  rpc Push(PushRequest) returns (PushResponse) {}
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}

  rpc PushStream(stream PushRequest) returns (PushResponse) {}
  rpc GetStream(GetRequest) returns (stream GetResponse) {}

  rpc IsLeader(Empty) returns (IsLeaderResponse) {}
  rpc IsDataExists(GetRequest) returns (IsDataExistsResponse) {}
}

message Empty{
}

message IsLeaderResponse {
  bool isLeader = 1;
  string LeaderMateServerAddr = 2;
}

message IsDataExistsResponse {
  bool isDataExists = 1;
}

message JoinRequest {
  string ServerName = 1;
  string ServerAddr = 2;
}

message JoinResponse {
  string Message = 1;
  bool JoinResult = 2;
}

message PushRequest {
  bytes Data = 1;
}

message PushResponse {
  string DataId = 1;
  bool PushResult = 2;
  MateCode Code = 3;
  string LeaderMateServerAddr = 4;
}

enum MateCode {
  Success = 0;
  Fail = 1;
  NotLeader = 2;
  FileNotExist = 4;
}

message GetRequest {
  string DataId = 1;
}

message GetResponse {
  bytes Data = 1;
  bool GetResult = 2;
  MateCode Code = 3;
}

message DeleteRequest {
  string DataId =  1;
}

message DeleteResponse {
  bool DeleteResult = 1;
  MateCode Code = 2;
  string LeaderMateServerAddr = 3;
}